<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical"

    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/tv_categorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:text="@string/tv_categorie"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:text="@string/tv_description" />
    <TextView
        android:id="@+id/tv_prix"
        android:textColor="@color/colorRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_prix" />

    <Button
        android:id="@+id/btn_commanderMerch"
        android:layout_width="320dp"
        android:layout_marginLeft="48dp"
        android:textColor="@color/colorDarkGrey"
        android:background="@drawable/btn_main"
        android:textSize="18dp"
        android:layout_height="79dp"
        android:layout_marginTop="60dp"

        android:text="@string/btn_commanderMerch" />

    <TextView
        android:id="@+id/tv_invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
</LinearLayout>