<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/point"
    tools:context=".MainActivityInfoAcheteur">

    <TextView
        android:id="@+id/tv_titreMerch"
        android:layout_width="262dp"
        android:layout_height="74dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nom"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/et_nom"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_prenom"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/et_prenom"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_telephone"
        android:layout_width="340dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="@string/et_telephone"
        android:inputType="phone"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="348dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_adresse"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="224dp"
        android:ems="10"
        android:hint="@string/et_adresse"
        android:backgroundTint="@color/colorWhite"
        android:inputType="textPostalAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_acheterMerch"
        android:layout_width="223dp"
        android:layout_height="51dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="539dp"
        android:text="@string/btn_acheterMerch"
        android:background="@drawable/btn_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chk_terms"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="428dp"
        android:text="@string/chk_terms"
        android:textColor="@color/colorWhite"
        android:buttonTint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chk_notif"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="484dp"
        android:text="@string/chk_notif"
        android:textColor="@color/colorWhite"
        android:buttonTint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>